syntax = "proto3";
package chainjustice.chainjustice.justice;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "justice/params.proto";
import "justice/belonging.proto";
import "justice/country.proto";
import "justice/prepare.proto";
import "justice/invasion.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/chain-justice/chain-justice/x/justice/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/chain-justice/chain-justice/justice/params";
  }
  // Queries a Belonging by index.
	rpc Belonging(QueryGetBelongingRequest) returns (QueryGetBelongingResponse) {
		option (google.api.http).get = "/chain-justice/chain-justice/justice/belonging/{index}";
	}

	// Queries a list of Belonging items.
	rpc BelongingAll(QueryAllBelongingRequest) returns (QueryAllBelongingResponse) {
		option (google.api.http).get = "/chain-justice/chain-justice/justice/belonging";
	}

// Queries a Country by index.
	rpc Country(QueryGetCountryRequest) returns (QueryGetCountryResponse) {
		option (google.api.http).get = "/chain-justice/chain-justice/justice/country/{index}";
	}

	// Queries a list of Country items.
	rpc CountryAll(QueryAllCountryRequest) returns (QueryAllCountryResponse) {
		option (google.api.http).get = "/chain-justice/chain-justice/justice/country";
	}

// Queries a Prepare by index.
	rpc Prepare(QueryGetPrepareRequest) returns (QueryGetPrepareResponse) {
		option (google.api.http).get = "/chain-justice/chain-justice/justice/prepare/{index}";
	}

	// Queries a list of Prepare items.
	rpc PrepareAll(QueryAllPrepareRequest) returns (QueryAllPrepareResponse) {
		option (google.api.http).get = "/chain-justice/chain-justice/justice/prepare";
	}

// Queries a Invasion by index.
	rpc Invasion(QueryGetInvasionRequest) returns (QueryGetInvasionResponse) {
		option (google.api.http).get = "/chain-justice/chain-justice/justice/invasion/{index}";
	}

	// Queries a list of Invasion items.
	rpc InvasionAll(QueryAllInvasionRequest) returns (QueryAllInvasionResponse) {
		option (google.api.http).get = "/chain-justice/chain-justice/justice/invasion";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetBelongingRequest {
	  string index = 1;

}

message QueryGetBelongingResponse {
	Belonging belonging = 1 [(gogoproto.nullable) = false];
}

message QueryAllBelongingRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBelongingResponse {
	repeated Belonging belonging = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetCountryRequest {
	  string index = 1;

}

message QueryGetCountryResponse {
	Country country = 1 [(gogoproto.nullable) = false];
}

message QueryAllCountryRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCountryResponse {
	repeated Country country = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetPrepareRequest {
	  string index = 1;

}

message QueryGetPrepareResponse {
	Prepare prepare = 1 [(gogoproto.nullable) = false];
}

message QueryAllPrepareRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPrepareResponse {
	repeated Prepare prepare = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetInvasionRequest {
	  string index = 1;

}

message QueryGetInvasionResponse {
	Invasion invasion = 1 [(gogoproto.nullable) = false];
}

message QueryAllInvasionRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllInvasionResponse {
	repeated Invasion invasion = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
