syntax = "proto3";
package chainjustice.chainjustice.player;

import "gogoproto/gogo.proto";
import "player/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/chain-justice/chain-justice/x/player/types";

// GenesisState defines the player module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
